updated 2001 data and added in window resize handler

--- a/index.html
+++ b/index.html
@@ -12,8 +12,13 @@
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.11.2/mapbox-gl.js'></script>
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.11.2/mapbox-gl.css' rel='stylesheet' />
     <style>
-        .map-container svg{
+        body {
             background-color: #00003f;
+        }
+        .map-container svg {
+            background-color: #00003f;
+            height: 100vh;
+            float: right;
         }
 
         .roadPath {
