--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.11.2/mapbox-gl.js'></script>
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.11.2/mapbox-gl.css' rel='stylesheet' />
+
+    <link href="css/pure-min.css" rel="stylesheet" />
     <style>
         body {
             background-color: #00003f;
@@ -28,7 +30,10 @@
 
 </head>
 <body>
-<div id="ukMap" class="map-container"></div>
+<div class="pure-g">
+    <div class="pure-u-2-3"></div>
+    <div id="ukMap" class="map-container pure-u-1-3"></div>
+</div>
 <script src="js/map.js"></script>
 </body>
 </html>
