--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
 </head>
 <body>
 <div class="pure-g">
-    <div class="pure-u-2-3"></div>
+    <div class="pure-u-2-3">
+        <button class="pure-button pure-button-primary">Motor traffic</button>
+        <button class="pure-button pure-button-primary">Cycle Traffic</button>
+    </div>
     <div id="ukMap" class="map-container pure-u-1-3"></div>
 </div>
 <script src="js/map.js"></script>
