--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         }
         .map-container svg {
             background-color: #00003f;
-            height: 100vh;
+            /*height: 100vh;*/
             float: right;
         }
 
@@ -32,10 +32,12 @@
 <body>
 <div class="pure-g">
     <div class="pure-u-2-3">
-        <button class="pure-button pure-button-primary">Motor traffic</button>
-        <button class="pure-button pure-button-primary">Cycle Traffic</button>
+        <button class="pure-button pure-button-primary" id="motorDataSelect">Motor traffic</button>
+        <button class="pure-button pure-button-primary" id="cycleDataSelect">Cycle Traffic</button>
     </div>
     <div id="ukMap" class="map-container pure-u-1-3"></div>
+    <div id="yearPicker" class="pure-u-1">
+    </div>
 </div>
 <script src="js/map.js"></script>
 </body>
